--- a/style.css
+++ b/style.css
@@ -118,13 +118,13 @@ hr {
 
 
 progress[value] {
-    height: 10px;
+    height: 30px;
     width: 350px;
     -webkit-apearance: none;
 }
 
 progress[value]::-webkit-progress-bar {
-    background-color: ;
+    background-color: #f05836;
     border-radius: 2px;
     box-shadow: 0 2px 5px rgba(0, 0, 0.25, inset);
 }
